[gd_scene load_steps=3 format=3 uid="uid://b3a80fs03mjgr"]

[ext_resource type="PackedScene" uid="uid://ih7bydowke4l" path="res://scenes/game_screen.tscn" id="1_n4nin"]
[ext_resource type="Script" path="res://scenes/game_screen_animation.gd" id="2_en16j"]

[node name="game_screen_animation" instance=ExtResource("1_n4nin")]
editor_description = "play the initial animation and move on to the next GameScreen. On revisits to this screen it will skip instantly to the next screen."
script = ExtResource("2_en16j")
path_to_new_screen_tscn = ""

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
